@@ -29,6 +29,7 @@ Version 1.0.xxx (April xxth 2013)
 - Implemented: Added support for short term data in the custom temperature graph
 - Changed: Application Settings
 - Fixed: Push On delayed Off was not working
+- Fixed: RFXtrx USB mode option in hardware settings
 
 Version 1.0.412 (April 1th 2013)
 - Fixed: Siren icon on dashboard
